Add media queries for print and screen display
- Added media query for print to display only elements with the class "printable"
- Added media query for screen to hide elements with the class "printable" when a modal for printing is opened

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/* Отображение в окне печати только страницы печати */
+@media print {
+    body>*:not(.printable) {
+        display: none;
+    }
+
+    .printable {
+        display: block;
+    }
+}
+
+/* Скрытие страницы печати на экране во время открытия модального окна печати*/
+@media screen {
+    .printable {
+        display: none;
+    }
+}
+
